Added swagger in more routes
